<resources>
    <string name="app_name">标准版无纸化</string>
    <string name="set_name_">席位：%1$s</string>
    <string name="err_download">文件下载出错</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="bind_member">绑定参会人</string>
    <string name="err_unselected_member">没有选择参会人</string>
    <string name="create">新建</string>
    <string name="create_member">创建参会人</string>
    <string name="company_">公司：</string>
    <string name="name_">名称：</string>
    <string name="position_">职位：</string>
    <string name="phone_">电话：</string>
    <string name="email_">邮箱：</string>
    <string name="password_">密码：</string>
    <string name="cannot_be_empty">必填项</string>
    <string name="name_is_required">姓名是必填项</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="password_can_not_blank">密码不能为空</string>
    <string name="clear">清除</string>
    <string name="eraser">橡皮搽</string>
    <string name="revoke">撤销</string>
    <string name="sign_in_password_error">签到密码错误</string>
    <string name="meet_others">其它功能</string>
    <string name="meeting_agenda">会议议程</string>
    <string name="meeting_data">会议资料</string>
    <string name="meeting_shared_file">共享文件</string>
    <string name="meeting_annotation_file">批注查看</string>
    <string name="meeting_chat">互动交流</string>
    <string name="meeting_live_video">视频直播</string>
    <string name="meeting_art_board">电子白板</string>
    <string name="meeting_web_browsing">网页浏览</string>
    <string name="meeting_questionnaire">问卷调查</string>
    <string name="meeting_sign_in_information">签到信息</string>
    <string name="meeting_score">评分查看</string>
    <string name="online">在线</string>
    <string name="previous">上一页</string>
    <string name="next_page">下一页</string>
    <string name="upload_file">上传文件</string>
    <string name="documentation_data">文档资料</string>
    <string name="picture_file">图片文件</string>
    <string name="video_file">视频文件</string>
    <string name="other_file">其它文件</string>
    <string name="push_file">推送文件</string>
    <string name="export_file">导出资料</string>
    <string name="default_page">0 / 0</string>
    <string name="please_choose_push_file">请选择要推送的文件</string>
    <string name="select_push_target">选择推送目标</string>
    <string name="stop_push">停止推送</string>
    <string name="member">参会人</string>
    <string name="projection">投影</string>
    <string name="please_choose_push_target">请选择推送的目标</string>
    <string name="no_wps_software_found">您的设备未安装WPS软件</string>
    <string name="no_export_file">没有可导出的文件</string>
    <string name="number">序号</string>
    <string name="file_name">文件名</string>
    <string name="id">ID</string>
    <string name="file_download">文件下载</string>
    <string name="download">下载</string>
    <string name="back">返回</string>
    <string name="please_enter_valid_file_name">请输入有效文件名</string>
    <string name="tip_file_name_unlawfulness">该文件名称非法</string>
    <string name="check_all">全选</string>
    <string name="send">发送</string>
    <string name="video_chat">视频聊天</string>
    <string name="time">%1$s【 %2$s 】</string>
    <string name="me_time">我【 %1$s 】</string>
    <string name="choose_member_first">请先选择参会人</string>
    <string name="please_enter_message">请输入信息</string>
    <string name="exceed_max_words">一次最多发送300字的信息</string>
    <string name="is_exit_to_main">是否退出到主页</string>
    <string name="click_again_exit">再次点击退出应用</string>
    <string name="checked_in">已签到</string>
    <string name="not_checked_in">未签到</string>
    <string name="yqd_">已签到：%1$s</string>
    <string name="yd_">应到：%1$s</string>
    <string name="wqd_">未签到：%1$s</string>
    <string name="reject_postilview">%1$s 拒绝了查看批注文件的权限</string>
    <string name="agreed_postilview">%1$s 同意了查看批注文件的权限，可随时查看</string>
    <string name="watch_video">观看视频</string>
    <string name="stop_watch">停止观看</string>
    <string name="please_choose_view">请选择预览窗口</string>
    <string name="please_choose_video_show">请选择要播放的视频节目</string>
    <string name="please_choose_stop_view">请选择要停止的窗口</string>
    <string name="score_title">**评分统计信息**</string>
    <string name="score_describe">评分描述：</string>
    <string name="score_file">评分文件：</string>
    <string name="is_register">是否记名：</string>
    <string name="yd_member">应到人数：</string>
    <string name="yp_member">已评人数：</string>
    <string name="score_count">总分：</string>
    <string name="score_average">总平均分：</string>
    <string name="score_member_title">**参会人评分信息**</string>
    <string name="not_supported">不支持打开该格式的文件</string>
    <string name="exit">退出</string>
    <string name="draw_save">保存</string>
    <string name="draw_clear">清空</string>
    <string name="draw_picture">图片</string>
    <string name="draw_font">字体</string>
    <string name="draw_color">颜色</string>
    <string name="draw_revoke">撤销</string>
    <string name="initiate_multi_person_comments">发起多人批注</string>
    <string name="stop_multi_person_comments">停止多人批注</string>
    <string name="draw_round">圆形</string>
    <string name="draw_rect">矩形</string>
    <string name="draw_line">直线</string>
    <string name="draw_curve">曲线</string>
    <string name="draw_pen">铅笔</string>
    <string name="draw_text">文本</string>
    <string name="draw_eraser">橡皮</string>
    <string name="please_enter_file_name">请输入文件名</string>
    <string name="save_server">服务器</string>
    <string name="save_local">本地</string>
    <string name="tip_save_as">保存在 %1$s</string>
    <string name="title_whether_agree_join">是否同意加入 %1$s 发起的白板批注？</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="tip_join_the_sharing">加入了共享</string>
    <string name="tip_repulse_join">拒绝加入</string>
    <string name="exit_white_board">退出白板</string>
    <string name="tip_exit_the_shared">退出了共享</string>
    <string name="choose_member">选择参会人</string>
    <string name="please_choose_member">请先选择参会人</string>
    <string name="draw_drag">拖动</string>
    <string name="meeting_annotation_view">批注查看</string>
    <string name="no_function">没有这个功能</string>
    <string name="call_service">呼叫服务</string>
    <string name="paper">纸</string>
    <string name="tea">茶水</string>
    <string name="pen">笔</string>
    <string name="calculate">计算器</string>
    <string name="waiter">服务员</string>
    <string name="clean">清扫</string>
    <string name="service_pager">纸张申请</string>
    <string name="service_pen">笔申请</string>
    <string name="service_tea">茶水申请</string>
    <string name="service_calculate">计算器申请</string>
    <string name="service_waiter">服务员申请</string>
    <string name="service_clean">清扫申请</string>
    <string name="mandatory">强制</string>
    <string name="launch_screen_title"><![CDATA[选择同屏目标<发起屏幕同屏>]]></string>
    <string name="attendee">参会人</string>
    <string name="launch_screen">发起同屏</string>
    <string name="projector">投影机</string>
    <string name="err_target_NotNull">请先选择目标</string>
    <string name="stop_screen">结束同屏</string>
    <string name="stop_screen_title"><![CDATA[选择同屏目标<结束屏幕同屏>]]></string>
    <string name="err_NoPermission">您没有该权限</string>
    <string name="enterMeeting">进入会议</string>
    <string name="systemSetting">系统设置</string>
    <string name="configurationFileCorrupted">配置文件已损坏，是否进行重启初始化？</string>
    <string name="modifyConfigInfo">修改配置信息</string>
    <string name="ipAddres">IP地址：</string>
    <string name="port">端口号：</string>
    <string name="maxBitRate">最大码率：</string>
    <string name="disableMulticast">禁用组播</string>
    <string name="tcpMode">TCP模式</string>
    <string name="err_tooLittle">最小码率值不能小于500</string>
    <string name="error_tooMush">最大码率值不能大于10000</string>
    <string name="errorContentNull">请先输入要修改的内容</string>
    <string name="no_ongoing_screen">没有可加入的同屏</string>
    <string name="choose_join_screen">选择加入同屏</string>
    <string name="join_screen">加入同屏</string>
    <string name="can_only_choose_one">只能选择一个加入</string>
    <string name="full_screen">全屏输出</string>
    <string name="flow_1">1号输出</string>
    <string name="flow_2">2号输出</string>
    <string name="flow_3">3号输出</string>
    <string name="flow_4">4号输出</string>
    <string name="launch_pro">发起投影</string>
    <string name="launch_pro_title"><![CDATA[选择投影机<发起投影>]]></string>
    <string name="stop_pro_title"><![CDATA[选择投影机<结束投影>]]></string>
    <string name="stop_pro">结束投影</string>
    <string name="please_choose_projector_first">请先选择投影机</string>
    <string name="please_choose_res_first">请先选择资源通道</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="play_pause">暂停/播放</string>
    <string name="stop">停止</string>
    <string name="screen_shot">截图</string>
    <string name="launch_video_title"><![CDATA[选择同屏目标<开始节目同屏>]]></string>
    <string name="stop_video_title"><![CDATA[选择同屏目标<结束屏幕同屏>]]></string>
    <string name="role_host">参会人（主持人）：</string>
    <string name="role_secretary">参会人（秘书）：</string>
    <string name="role_admin">参会人（管理员）：</string>
    <string name="vote_manage">投票管理</string>
    <string name="terminal_control">终端控制</string>
    <string name="election_manage">选举管理</string>
    <string name="video_control">视频控制</string>
    <string name="screen_manage">屏幕管理</string>
    <string name="bulletin_manage">公告管理</string>
    <string name="score_manage">评分管理</string>
    <string name="name">名称</string>
    <string name="device_type">设备类型</string>
    <string name="device_id">设备ID</string>
    <string name="device_state">设备状态</string>
    <string name="interface_state">界面状态</string>
    <string name="out_open">外部打开文档</string>
    <string name="rise">上升</string>
    <string name="decline">下降</string>
    <string name="app_restart">软件重启</string>
    <string name="terminal_restart">终端重启</string>
    <string name="terminal_shutdown">终端关机</string>
    <string name="secondary_signin">辅助签到</string>
    <string name="set_role">角色设定</string>
    <string name="wake_on_lan">网络唤醒</string>
    <string name="open_document_externally">外部打开文档</string>
    <string name="elevator">升降机</string>
    <string name="microphone">话筒</string>
    <string name="database_dev">会议数据库</string>
    <string name="tea_dev">会议茶水设备</string>
    <string name="pro_dev">会议投影设备</string>
    <string name="capture_dev">会议流采集设备</string>
    <string name="client_dev">会议终端设备</string>
    <string name="room_name">会议室名称</string>
    <string name="sign_in_hint">请在下面空白处进行手写签名</string>
    <string name="meeting_name">会议名称</string>
    <string name="meeting_status">会议状态</string>
    <string name="confidential">保密</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="reservation_person">预约人</string>
    <string name="save">保存</string>
    <string name="add_screen_permission">添加同屏权限</string>
    <string name="add_projection_permission">添加投影权限</string>
    <string name="add_upload_permission">添加上传权限</string>
    <string name="add_download_permission">添加下载权限</string>
    <string name="add_vote_permission">添加投票权限</string>
    <string name="del_screen_permission">取消同屏权限</string>
    <string name="del_projection_permission">取消投影权限</string>
    <string name="del_upload_permission">取消上传权限</string>
    <string name="del_download_permission">取消下载权限</string>
    <string name="del_vote_permission">取消投票权限</string>
    <string name="role">角色</string>
    <string name="lift">升降机</string>
    <string name="mike">话筒</string>
    <string name="archive_options">归档选项</string>
    <string name="operate_info">操作信息</string>
    <string name="operate_state">操作状态</string>
    <string name="encryption">加密</string>
    <string name="start_archive">开始归档</string>
    <string name="cancel_archive">取消归档</string>
    <string name="meeting_info">会议基本信息</string>
    <string name="member_info">参会人员信息</string>
    <string name="signin_info">会议签到信息</string>
    <string name="meeting_vote_info">会议投票信息</string>
    <string name="meeting_share_file">会议共享文件</string>
    <string name="annotation_file">会议批注文件</string>
    <string name="meeting_id">会议ID</string>
</resources>