<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_blue_rect"
    android:orientation="vertical">

    <include layout="@layout/item_member_permission" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_member_permission"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add_screen"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/add_screen_permission" />

        <Button
            android:id="@+id/btn_add_projection"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/add_projection_permission" />

        <Button
            android:id="@+id/btn_add_upload"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/add_upload_permission" />

        <Button
            android:id="@+id/btn_add_download"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/add_download_permission" />

        <Button
            android:id="@+id/btn_add_vote"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/add_vote_permission" />

        <Button
            android:id="@+id/btn_save"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_del_screen"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/del_screen_permission" />

        <Button
            android:id="@+id/btn_del_projection"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/del_projection_permission" />

        <Button
            android:id="@+id/btn_del_upload"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/del_upload_permission" />

        <Button
            android:id="@+id/btn_del_download"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/del_download_permission" />

        <Button
            android:id="@+id/btn_del_vote"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/del_vote_permission" />

        <Button
            android:id="@+id/btn_back"
            style="@style/btn_pressed_style"
            android:layout_width="wrap_content"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/back" />
    </LinearLayout>
</LinearLayout>