<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="@color/table_line_color"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_number"
        style="@style/TableTitleStyle"
        android:layout_marginStart="1px"
        android:textSize="@dimen/text_size_small"
        android:background="@color/admin_table_title_bg"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="@string/number" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TableTitleStyle"
        android:background="@color/admin_table_title_bg"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/white"
        android:layout_weight="2"
        android:text="@string/meeting_name" />

    <TextView
        android:id="@+id/tv_status"
        style="@style/TableTitleStyle"
        android:background="@color/admin_table_title_bg"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="@string/meeting_status" />

    <TextView
        android:id="@+id/tv_room"
        style="@style/TableTitleStyle"
        android:background="@color/admin_table_title_bg"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/white"
        android:layout_weight="2"
        android:text="@string/room_name" />

    <TextView
        android:id="@+id/tv_confidential"
        android:background="@color/admin_table_title_bg"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/white"
        style="@style/TableTitleStyle"
        android:layout_weight="1"
        android:text="@string/confidential" />

    <TextView
        android:id="@+id/tv_start_time"
        style="@style/TableTitleStyle"
        android:background="@color/admin_table_title_bg"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/white"
        android:layout_weight="2"
        android:text="@string/start_time" />

    <TextView
        android:id="@+id/tv_end_time"
        style="@style/TableTitleStyle"
        android:background="@color/admin_table_title_bg"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/white"
        android:layout_weight="2"
        android:text="@string/end_time" />

    <TextView
        android:id="@+id/tv_reservation"
        style="@style/TableTitleStyle"
        android:background="@color/admin_table_title_bg"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="@string/reservation_person" />
</LinearLayout>