<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="@color/table_line_color"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_view_1"
        style="@style/TableTitleStyle"
        android:layout_marginStart="1px"
        android:layout_weight="1"
        android:background="@color/admin_table_title_bg"
        android:text="@string/meeting_id"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_2"
        style="@style/TableTitleStyle"
        android:layout_weight="2"
        android:background="@color/admin_table_title_bg"
        android:text="@string/meeting_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_3"
        style="@style/TableTitleStyle"
        android:layout_weight="1"
        android:background="@color/admin_table_title_bg"
        android:text="@string/meeting_status"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_4"
        style="@style/TableTitleStyle"
        android:layout_weight="1"
        android:background="@color/admin_table_title_bg"
        android:text="@string/confidential"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_5"
        style="@style/TableTitleStyle"
        android:layout_weight="2"
        android:background="@color/admin_table_title_bg"
        android:text="@string/start_time"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_6"
        style="@style/TableTitleStyle"
        android:layout_weight="2"
        android:background="@color/admin_table_title_bg"
        android:text="@string/end_time"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/item_view_7"
        style="@style/TableTitleStyle"
        android:layout_weight="1"
        android:background="@color/admin_table_title_bg"
        android:text="@string/reservation_person"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />
</LinearLayout>