<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:text="@string/sign_in_hint"
        android:textSize="@dimen/text_size_slightly_larger"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <xlk.paperless.standard.ui.ArtBoard
        android:id="@+id/pwd_draw_board"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pwd_draw_revoke"
            style="@style/btn_pressed_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/revoke" />

        <Button
            android:id="@+id/pwd_draw_clear"
            android:layout_width="0dp"
            style="@style/btn_pressed_style"
            android:layout_weight="1"
            android:text="@string/clear" />

        <Button
            android:id="@+id/pwd_draw_determine"
            android:layout_width="0dp"
            style="@style/btn_pressed_style"
            android:layout_weight="1"
            android:text="@string/determine" />

        <Button
            android:id="@+id/pwd_draw_cancel"
            android:layout_width="0dp"
            style="@style/btn_pressed_style"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>